checker/tests/semantic/04-define-let.cl
class A {
    x : Bool;
    
    f(x : Int) : Int {
        let x    : Int <- 0,
            self : Int <- 0, 
            x    : C <- 1
        in x
    };

};
